--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
     <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon)</a>
+    <p><video autoplay muted loop><source src="./resources/videos/excursion.mp4" type="video/mp4"></video>
+<div><h2>Your personal travel guide</h2>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p></div>
+  <div><p><img src="./resources/images/camp.jpg" alt="Camp"></img></p></div>
+  <div><p><img src="./resources/images/phone.png" alt="Phone"></p></img>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href ="#">Download Excursion (Coming soon!)</a>
+<div><p id="copyright">© Excursion</p></div>
   </body>
 </html>
